Dark mode fixes

--- a/website/src/pages/probeer-het.module.css
+++ b/website/src/pages/probeer-het.module.css
@@ -51,5 +51,5 @@
 }
 
 .examplesDropdownWrapper > button {
-  color:black;
+  color: var(--font-color);
 }
